crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__W391_W391_2.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
W391 [*] Too many newlines at end of file
  --> W391_2.py:14:1
   |
12 |       foo()
13 |       bar()
14 | /
15 | |
16 | |
17 | |
   | |_^
help: Remove trailing newlines
14 - 
15 - 
16 - 
17 - 
   |
