crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__module-import-not-at-top-of-file_E402_docstring.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E402 [*] Module level import not at top of file
 --> E402_docstring.py:5:1
  |
3 | print("something")
4 |
5 | import os
  | ^^^^^^^^^
  |
help: Move module level imports to top of file
  |
1 | """module docstring"""
2 + import os
3 |
4 | print("something")
5 |
  - import os
  |
note: This is an unsafe fix and may change runtime behavior
