crates/ruff_linter/src/rules/pycodestyle/snapshots/ruff_linter__rules__pycodestyle__tests__preview__redundant-backslash_E502.py.snap
---
source: crates/ruff_linter/src/rules/pycodestyle/mod.rs
---
E502 [*] Redundant backslash
  --> E502.py:9:9
   |
 7 |     + 4
 8 |
 9 | a = (3 -\
   |         ^
10 |     2 +   \
11 |     7)
   |
help: Remove redundant backslash
   |
8  |
   - a = (3 -\
9  + a = (3 -
10 |     2 +   \
   |

E502 [*] Redundant backslash
  --> E502.py:10:11
   |
 9 | a = (3 -\
10 |     2 +   \
   |           ^
11 |     7)
   |
help: Remove redundant backslash
   |
9  | a = (3 -\
   -     2 +   \
10 +     2 +   
11 |     7)
   |

E502 [*] Redundant backslash
  --> E502.py:14:9
   |
13 | z = 5 + \
14 |     (3 -\
   |         ^
15 |     2 +   \
16 |     7) + \
   |
help: Remove redundant backslash
   |
13 | z = 5 + \
   -     (3 -\
14 +     (3 -
15 |     2 +   \
   |

E502 [*] Redundant backslash
  --> E502.py:15:11
   |
13 | z = 5 + \
14 |     (3 -\
15 |     2 +   \
   |           ^
16 |     7) + \
17 |     4
   |
help: Remove redundant backslash
   |
14 |     (3 -\
   -     2 +   \
15 +     2 +   
16 |     7) + \
   |

E502 [*] Redundant backslash
  --> E502.py:23:17
   |
22 | b = [
23 |     2 + 4 + 5 + \
   |                 ^
24 |     44 \
25 |     - 5
   |
help: Remove redundant backslash
   |
22 | b = [
   -     2 + 4 + 5 + \
23 +     2 + 4 + 5 + 
24 |     44 \
   |

E502 [*] Redundant backslash
  --> E502.py:24:8
   |
22 | b = [
23 |     2 + 4 + 5 + \
24 |     44 \
   |        ^
25 |     - 5
26 | ]
   |
help: Remove redundant backslash
   |
23 |     2 + 4 + 5 + \
   -     44 \
24 +     44 
25 |     - 5
   |

E502 [*] Redundant backslash
  --> E502.py:29:11
   |
28 | c = (True and
29 |     False \
   |           ^
30 |     or False \
31 |     and True \
   |
help: Remove redundant backslash
   |
28 | c = (True and
   -     False \
29 +     False 
30 |     or False \
   |

E502 [*] Redundant backslash
  --> E502.py:30:14
   |
28 | c = (True and
29 |     False \
30 |     or False \
   |              ^
31 |     and True \
32 | )
   |
help: Remove redundant backslash
   |
29 |     False \
   -     or False \
30 +     or False 
31 |     and True \
   |

E502 [*] Redundant backslash
  --> E502.py:31:14
   |
29 |     False \
30 |     or False \
31 |     and True \
   |              ^
32 | )
   |
help: Remove redundant backslash
   |
30 |     or False \
   -     and True \
31 +     and True 
32 | )
   |

E502 [*] Redundant backslash
  --> E502.py:44:14
   |
43 | s = {
44 |     'x': 2 + \
   |              ^
45 |     2
46 | }
   |
help: Remove redundant backslash
   |
43 | s = {
   -     'x': 2 + \
44 +     'x': 2 + 
45 |     2
   |

E502 [*] Redundant backslash
  --> E502.py:55:12
   |
55 | x = {2 + 4 \
   |            ^
56 |   + 3}
   |
help: Remove redundant backslash
   |
54 |
   - x = {2 + 4 \
55 + x = {2 + 4 
56 |   + 3}
   |

E502 [*] Redundant backslash
  --> E502.py:61:9
   |
59 |     2 + 2  # \
60 |     + 3  # \
61 |     + 4 \
   |         ^
62 |     + 3
63 | )
   |
help: Remove redundant backslash
   |
60 |     + 3  # \
   -     + 4 \
61 +     + 4 
62 |     + 3
   |

E502 [*] Redundant backslash
  --> E502.py:82:12
   |
80 |     "xyz"
81 |
82 | x = ("abc" \
   |            ^
83 |     "xyz")
   |
help: Remove redundant backslash
   |
81 |
   - x = ("abc" \
82 + x = ("abc" 
83 |     "xyz")
   |

E502 [*] Redundant backslash
  --> E502.py:86:11
   |
85 | x = [
86 |     "a" + \
   |           ^
87 | f"""
88 | b
   |
help: Remove redundant backslash
   |
85 | x = [
   -     "a" + \
86 +     "a" + 
87 | f"""
   |

E502 [*] Redundant backslash
  --> E502.py:89:7
   |
87 | f"""
88 | b
89 | """ + \
   |       ^
90 |     "c"
91 | ]
   |
help: Remove redundant backslash
   |
88 | b
   - """ + \
89 + """ + 
90 |     "c"
   |

E502 [*] Redundant backslash
  --> E502.py:95:14
   |
94 | def foo():
95 |     x = (a + \
   |              ^
96 |         2)
   |
help: Remove redundant backslash
   |
94 | def foo():
   -     x = (a + \
95 +     x = (a + 
96 |         2)
   |
